# axlyn

./: .gitignore  Cargo.toml  LICENSE  README.md  routes.conf
.github/: CODE_OF_CONDUCT
dev/: config.ini
resources/: 404.html  index.html
resources/src/: package-lock.json
resources/static/: styles.css
src/: logger.rs  main.rs  utils.rs
src/admin/: mod.rs
src/middleware/: mod.rs
src/server/: mod.rs
templates/: config.ini
utils/admin-interface/: package-lock.json  package.json
utils/admin-interface/src/: App.js
utils/admin-interface/src/Components/: DatabaseView.js  EndPointView.js
utils/admin-interface/src/Components/global/: Navbar.js  Sidebar.js  SidebarItem.js  navbar.module.css  sidebar.module.css  sidebarItem.module.css
