[package]
name = "axlyn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
colored = "2"
rust-ini = "0.18"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }